--- a/home.html
+++ b/home.html
@@ -1,23 +1,10 @@
 <meta charset="utf-8">
 <style>.bs-social {display:block;}</style>
-		<h1>Добро пожаловать.</h3>
+		<h1>Добро пожаловать.</h1>
 		<h3>Вас приветствует Стас Schefer из г. Екатеринбурга</h3>
 		<p>Я занимаюсь конструированием и пошивом спортивной одежды. <span>При заказе может идти речь</span> в основном <span>о пошиве моих собственных моделей</span> одежды по Вашим размерам.</p>
 		<p>Я изготавливаю одежду на современном оборудовании из высокотехнологичных материалов (<a target="_blank" href="http://www.polartec.ru/?id=4">Polartec</a>, <a target="_blank" href="http://gaba.su/Pages/Publication_230.html/?id=4">мембранные ткани</a>, <a target="_blank" href="http://otvet.mail.ru/answer/10221085">Холлофайбер</a>, <a target="_blank" href="http://bigwall.ru/info/items/materials/softshel_softshell/">Softshell</a> и т.п.) C удовольствием возьмусь изготовить что-то в неизвестной для меня теме, виде спорта и отдыха. Есть возможность проклейки основных швов изделия специальной лентой для придания им водонепроницаемых свойств. В изделиях, предназначенных для влажной погоды используются водонепроницаемые молнии. Ссылки на фото дают лишь общее представление об изделиях, поскольку ассортимент тканей постоянно обновляется и повторить изделие в одной расцветке не всегда получается.</span></p>
 		<p><b>Порядок оформления заказа</b>: позвонить по тел. <span style="color:red">+7 922 14 226 14</span>, чтобы договориться о времени встречи для снятия мерок и резервирования материалов.</p>
-		<p>Средняя стоимость готовых изделий:
-		<ul>
-			<li>Ветровка из 2-слойной мембраны (швы не проклеиваются, подклад из сетки) от 1500 руб.</li>
-			<li>Дождевик из 2-слойной мембраны (без подклада, проклеенные швы) от 1500 руб.</li>
-			<li>Дождевик из 3-слойной мембраны от 2000 руб.</li>
-			<li>Анорак из 2-слойной мембраны(без подклада с антимоскитной сеткой) от 1500 руб.</li>
-			<li>Велоштаны из 2-х слойной мембраны(подклад из сетки, светоотражающая отделка и т.д.) от 1200 руб.</li>
-			<li>Велосумка на заказ под свою раму от 450 руб.</li>		
-			<li>Куртка из виндблока или софтшела от 2500 руб.</li>
-			<li>Кофта из полартека от 1500 руб.</li>
-			<li>Жилет утепленый от 1500 руб.</li>
-			<li>Балаклава 200 руб.</li>
-			<li>Шапка 200 руб.</li>
-		</ul>
-			Стоимость куртки, штанов, белья с учётом размера и других факторов вы можете рассчитать самостоятельно во вкладке "калькулятор".
+		<p>Ассортимент и цены на готовые изделия можно посмотреть в моей <a href="https://vk.com/sportschef" target="_blank">группе в Контакте</a> 
+			Цену куртки, штанов, белья с учётом размера и других факторов вы можете рассчитать самостоятельно во вкладке "калькулятор".
 		</p>
