--- a/contacts.html
+++ b/contacts.html
@@ -21,7 +21,7 @@ title: Контакты
     </div>
     <div class="col-md-4">
       <h3>Зеркало сайта</h3>
-      <h4><a href="http://schefer.ucoz.ru/" target="_blank">schefer.ucoz.ru</a></h4>
+      <h4><a href="http://schefer.ru/" target="_blank">schefer.ru</a></h4>
     </div>
   </div>
 </div>
