--- a/contacts.html
+++ b/contacts.html
@@ -13,15 +13,15 @@ title: Контакты
   <div class="info row">
     <div class="col-md-4">
       <h3>Телефон</h3>
-      <h4>+7 922 14 226 14</h4>
+      <h4>{{ site.owner.phone }}</h4>
     </div>
     <div class="col-md-4">
       <h3>E-mail</h3>
-      <h4>ctac@k66.ru</h4>
+      <h4>{{ site.owner.email }}</h4>
     </div>
     <div class="col-md-4">
-      <h3>Зеркало сайта</h3>
-      <h4><a href="http://schefer.ru/" target="_blank">schefer.ru</a></h4>
+      <h3>Вконтакте</h3>
+      <h4><a href="https://vk.com/{{ site.owner.vk }}" target="_blank">vk.com/{{ site.owner.vk }}</a></h4>
     </div>
   </div>
 </div>
