--- a/faq.html
+++ b/faq.html
@@ -3,13 +3,7 @@ layout: default
 title: Ответы на вопросы
 ---
 
-<style>
-.zero:before {
-   content: '0. ';
-   margin-left: -17px;
-}
-</style>
-<h1>ЧаВО</h1>
+<h1>{{ page.title }}</h1>
 <p>
   <ol>
     <li>Я занимаюсь своим хобби один на дому в своей мастерской и отвечать на любые вопросы могу только по телефону. (руки заняты)</li>
