--- a/calculator.html
+++ b/calculator.html
@@ -9,7 +9,7 @@ title: Калькулятор
     <b><i>Итого:</i></b>&nbsp;
     <span id="calculator_total">0</span>&nbsp;руб.
   </div>
-  <p style="font-style: italic;"> * Подобрать варианты сочетаний цветов куртки можно в разделе "Сам себе дизайнер"</p>
+  <p style="font-style: italic;"> * Подобрать варианты сочетаний цветов в куртке можно в разделе "Сам себе дизайнер"</p>
 
 
   <div id="jacket" class="cloth col-md-6">
