--- a/paint/index.html
+++ b/paint/index.html
@@ -7,7 +7,13 @@ title: Сам себе дизайнер
     {
         position: relative;
         top: 0;
-        left: 130px;
+        left: 180px;
+    }
+
+    .canvas-container p
+    {
+        padding: 10px 0;
+        padding-left: 20px;
     }
 
     .canvas-palette-container
@@ -81,6 +87,7 @@ title: Сам себе дизайнер
     <div class="canvas-palette"></div>
 </div>
 <div class="canvas-container">
+    <p>Полученый вариант изображения можно сохранить на компьютер</p>
     <canvas class="canvas-outline"></canvas>
 </div>
 
