--- a/faq.html
+++ b/faq.html
@@ -22,7 +22,7 @@ title: Ответы на вопросы
 
     <li>Сроки изготовления в порядке очереди никак не конкретизируются из-за клиентов которые могут установить за дополнительное вознаграждение свои сроки.</li>
 
-    <li>Не отправляйте своих друзей и родственников сразу ко мне. Дайте им сперва ознакомится с моей работой и условиями на сайте http://schefer.ru/.</li>
+    <li>Не отправляйте своих друзей и родственников сразу ко мне. Дайте им сперва ознакомится с моей работой и условиями на сайте.</li>
 
     <li>Если вы не разбираетесь в технологиях и материалах то будьте готовы что я не пойму ваших вопросов.Прочитайте все ссылки на моей странице.</li>
 
