--- a/faq.html
+++ b/faq.html
@@ -32,6 +32,6 @@ title: Ответы на вопросы
 
     <li>Экспериментальный образец - это когда цена изделия соответствует цене материалов, пошедших на его изготовление.</li>
 
-    <span class="zero">Вы дочитали до этого пункта. Значит вы можете получить скидку до! 10 процентов, сославшись на пункт zero.</span>
+    <!--<span class="zero">Вы дочитали до этого пункта. Значит вы можете получить скидку до! 10 процентов, сославшись на пункт zero.</span>-->
   </ol>
 </p>
