--- a/faq.html
+++ b/faq.html
@@ -7,9 +7,9 @@ title: Ответы на вопросы
 
 <div class="faq">
   <ol>
-    <li>Я занимаюсь своим хобби один на дому в своей мастерской и отвечать на любые вопросы могу только по телефону. (руки заняты)</li>
+    <li>Я занимаюсь своим хобби один на дому в своей мастерской и отвечать на любые вопросы могу только по телефону (руки заняты).</li>
 
-    <li>Как правило из готовых изделий в наличии есть бельё , носки, шапочки.</li>
+    <li>Как правило из готовых изделий в наличии есть бельё, носки, шапочки.</li>
 
     <li>Посмотреть на мои изделия можно только в интернете или у тех кто уже пользуется.</li>
 
@@ -31,6 +31,5 @@ title: Ответы на вопросы
 
     <li>Экспериментальный образец - это когда цена изделия соответствует цене материалов, пошедших на его изготовление.</li>
 
-    <!--<span class="zero">Вы дочитали до этого пункта. Значит вы можете получить скидку до! 10 процентов, сославшись на пункт zero.</span>-->
   </ol>
 </div>
